--- a/src/components/todo/style.css
+++ b/src/components/todo/style.css
@@ -5,8 +5,10 @@ h2 {
 }
 
 .new-todo-form {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  flex-direction: row;
+  row-gap: 20px;
   margin-bottom: 20px;
 }
 
@@ -20,10 +22,9 @@ h2 {
 .new-todo-form button {
   padding: 10px;
   background-color: #4CAF50;
-  color: white;
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  font-weight: 700;
+  color: #fff;
 }
 
 .todo-table {
@@ -53,12 +54,13 @@ h2 {
   padding: 6px;
 }
 
-.todo-table td button {
-  padding: 6px 12px;
-  margin: 5px;
-  cursor: pointer;
-}
-
-.todo-table td button:hover {
-  background-color: #ddd;
+/* style.css */
+.success-message {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
 }
