--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,19 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+button {
+  color: #fff;
+  padding: 6px 12px;
+  margin: 5px;
+  cursor: pointer;
+  background-color: #333;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #ddd;
+  border-color: #ddd;
+  color: #333;
+
+}
