--- a/src/components/todo/style.css
+++ b/src/components/todo/style.css
@@ -1,9 +1,3 @@
-.kanban-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
 .new-todo-form {
   margin-bottom: 20px;
 }
@@ -73,6 +67,7 @@
 input[type="text"] {
   padding: 8px;
   margin-right: 8px;
+  margin-bottom: 10px;
 }
 
 .action-btn {
@@ -80,6 +75,13 @@ input[type="text"] {
   cursor: pointer;
   font-size: 14px;
   vertical-align: top;
+  padding: 0;
+  background-color: transparent;
+  line-height: 1;
+}
+
+.action-btn:hover {
+  background-color: transparent;
 }
 
 @media screen and (max-width:767px) {
